updated some spacing issues

--- a/Culture/culture.css
+++ b/Culture/culture.css
@@ -176,13 +176,13 @@
   }
 
   .row4-container {
-    width: 600px;
+    width: 560px;
     height: 310px;
   }
 
   .row4-container img {
-    bottom: -50px;
-    right: 295px;
+    bottom: -80px;
+    right: 310px;
     margin-bottom: -50px;
   }
 
@@ -243,13 +243,13 @@
   }
 
   .row4-container {
-    width: 770px;
+    width: 740px;
     height: 250px;
   }
 
   .row4-container img {
-    bottom: -12px;
-    right: 388px;
+    bottom: -50px;
+    right: 398px;
   }
 
   .row5 {
@@ -280,16 +280,17 @@
 }
 @media only screen and (min-width: 1200px) {
   .row4-container img {
-    bottom: -6px;
-    right: 455px;
+    bottom: -36px;
+    right: 480px;
   }
 
-  .row2-container, .row6-container {
+  .row2-container,
+  .row6-container {
     padding: 0 80px;
-}
+  }
 
   .row4-container {
-    width: 920px;
+    width: 900px;
     height: 230px;
     margin: 30px 0;
   }
@@ -307,4 +308,13 @@
   }
 }
 @media only screen and (min-width: 1400px) {
+  .row4-container {
+    width: 1020px;
+    height: 160px;
+  }
+
+  .row4-container img {
+    bottom: 4px;
+    right: 540px;
+  }
 }
